--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>ru.itpark</groupId>
-    <artifactId>cashback-service</artifactId>
+    <artifactId>credit-service</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
@@ -38,9 +38,9 @@
                 </executions>
             </plugin>
             <plugin>
-            <groupId>com.github.spotbugs</groupId>
-            <artifactId>spotbugs-maven-plugin</artifactId>
-            <version>3.1.8</version>
+                <groupId>com.github.spotbugs</groupId>
+                <artifactId>spotbugs-maven-plugin</artifactId>
+                <version>3.1.8</version>
                 <executions>
                     <execution>
                         <goals>
@@ -66,5 +66,6 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
+
 
 </project>
